--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
   assets:
     - assets/
     - assets/logo/
+    - assets/news/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
@@ -78,7 +79,7 @@ flutter:
   fonts:
     - family: Itim
       fonts:
-        - asset: fonts/ltim-Regular.ttf
+        - asset: fonts/Itim-Regular.ttf
     # - family: Trajan Pro
     #   fonts:
     #     - asset: fonts/TrajanPro.ttf
