--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.0.0
   bloc: ^8.1.0
+  url_launcher: ^6.1.7
 
 dev_dependencies:
   flutter_test:
