--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,14 +29,14 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  progress_dialog: ^1.2.4
-  rflutter_alert: ^2.0.4
-  http: ^0.13.1
-  fluttertoast: ^8.1.2
   flutter:
     sdk: flutter
-    
+
+
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  google_fonts: ^2.0.0
   bloc: ^8.1.0
   url_launcher: ^6.1.7
 
