--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -39,6 +40,7 @@ dependencies:
   google_fonts: ^2.0.0
   bloc: ^8.1.0
   url_launcher: ^6.1.7
+  community_material_icon: ^5.9.55
 
 dev_dependencies:
   flutter_test:
