--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   bloc: ^8.1.0
   url_launcher: ^6.1.7
   community_material_icon: ^5.9.55
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
